opam-version: "1.2"
name: "ocaml-vdom"
version: "0.1"
maintainer: "Alain Frisch <alain.frisch@lexifi.com>"
authors: [
  "Alain Frisch <alain.frisch@lexifi.com>"
]
homepage: "https://github.com/LexiFi/ocaml-vdom"
bug-reports: "https://github.com/LexiFi/ocaml-vdom/issues"
license: "MIT"
dev-repo: "https://github.com/LexiFi/ocaml-vdom.git"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {build & >= "2.0"}
  "js_of_ocaml-compiler"
  "gen_js_api" { >= "1.0.6" }
]
available: [ ocaml-version >= "4.08.0" ]
synopsis: "DOM and VDOM for OCaml"
description: """
This package contains:
- OCaml bindings to DOM and other client-side Javascript APIs (using gen_js_api).
- An implementation of the Elm architecture, where the UI is specified as a functional "view" on the current state.
"""