(rule
 (targets js_browser.ml)
 (deps js_browser.mli)
 (action
  (run %{bin:gen_js_api} %{deps})))

(library
 (name vdom_base)
 (public_name vdom.base)
 (wrapped false)
 (modules vdom))

(library
 (name vdom_js)
 (public_name vdom)
 (synopsis "Virtual Dom")
 (libraries gen_js_api vdom_base)
 (wrapped false)
 (modes byte)
 (modules vdom_blit js_browser))
