(rule
 (target examples.ml)
 (deps (glob_files_rec %{project_root}/examples/7guis/**index.ml))
 (action
  (with-stdout-to %{target}
   (run %{project_root}/tools/gen.exe %{deps}))))

(data_only_dirs editor)

(executable
 (name index)
 (modes byte)
 (link_flags -linkall)
 (libraries js_of_ocaml-toplevel vdom))

(rule
 (target exports.txt)
 (action
  (run jsoo_listunits -o %{target} stdlib %{lib:vdom.base:vdom_base.cma} %{lib:vdom:vdom_js.cma})))

(copy_files editor/editor.js)

(rule
 (target index.js)
 (action
  (run js_of_ocaml --export %{dep:exports.txt} --toplevel --pretty %{dep:index.bc} -o %{target})))

(alias
 (name default)
 (deps index.js index.html editor.js))
