(rule
 (target examples.ml)
 (deps (glob_files_rec %{project_root}/examples/**index.ml))
 (action
  (with-stdout-to %{target}
   (run %{project_root}/tools/gen.exe %{deps}))))

(executable
 (name index)
 (modes js)
 (libraries vdom)
 (modules index examples))

(executable
 (name runner)
 (modes byte)
 (link_flags -linkall)
 (libraries js_of_ocaml-toplevel vdom)
 (modules runner))

(rule
 (target exports.txt)
 (action
  (run jsoo_listunits -o %{target} stdlib %{lib:vdom.base:vdom_base.cma} %{lib:vdom:vdom_js.cma})))

(rule (copy index.bc.js index.js))

(rule
 (target runner.js)
 (action
  (run js_of_ocaml --export %{dep:exports.txt} --toplevel --pretty %{dep:runner.bc} -o %{target})))

(alias
 (name all)
 (deps (source_tree vendor) runner.js runner.html index.js index.html))
